// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="bg-theme-background"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col p-5 space-y-6 bg-theme-background"
        >
          <div
            class="flex justify-between w-full"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                aria-label="ARK"
                class="Circle__CircleWrapper-sc-d5u41q-0 fgSjup text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div>
                <h4
                  class="text-lg font-semibold"
                  data-testid="NewsCard__asset-ARK"
                >
                  ARK
                </h4>
                <div
                  class="flex items-center space-x-4"
                >
                  <p
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="NewsCard__author"
                  >
                    Travis Walker, Co-Founder
                  </p>
                  <div
                    class="Divider-sc-17ehhxk-0 iLifLj border-theme-secondary-300 dark:border-theme-secondary-800"
                    type="vertical"
                  />
                  <p
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="NewsCard__date-created"
                  >
                    <span
                      data-testid="TimeAgo"
                    >
                      A few seconds ago
                    </span>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col justify-end"
            >
              <div
                class="Label-sc-4akkzw-0 JnfDk"
                color="warning"
              >
                <span
                  class="text-sm mx-1"
                  data-testid="NewsCard__category"
                >
                  #Technical
                </span>
              </div>
            </div>
          </div>
          <div
            class="Divider-sc-17ehhxk-0 lgtApE border-theme-secondary-300 dark:border-theme-secondary-800"
            type="horizontal"
          />
          <div
            class="whitespace-pre-line text-theme-secondary-text"
            data-testid="NewsCard__content"
          >
            Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
            <a
              class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="#"
              rel="noopener noreferrer"
              to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
            >
              <span
                class="Link__Content-sc-ec014t-1 hUiuRR"
              >
                https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
              </span>
              <div
                class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                data-testid="Link__external"
                height="16"
                width="16"
              >
                <svg>
                  arrow-external.svg
                </svg>
              </div>
            </a>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewsCard should render with cover image 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="bg-theme-background"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col p-5 space-y-6 bg-theme-background"
        >
          <div
            class="flex justify-between w-full"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                aria-label="ARK"
                class="Circle__CircleWrapper-sc-d5u41q-0 fgSjup text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div>
                <h4
                  class="text-lg font-semibold"
                  data-testid="NewsCard__asset-ARK"
                >
                  ARK
                </h4>
                <div
                  class="flex items-center space-x-4"
                >
                  <p
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="NewsCard__author"
                  >
                    Travis Walker, Co-Founder
                  </p>
                  <div
                    class="Divider-sc-17ehhxk-0 iLifLj border-theme-secondary-300 dark:border-theme-secondary-800"
                    type="vertical"
                  />
                  <p
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="NewsCard__date-created"
                  >
                    <span
                      data-testid="TimeAgo"
                    >
                      A few seconds ago
                    </span>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col justify-end"
            >
              <div
                class="Label-sc-4akkzw-0 JnfDk"
                color="warning"
              >
                <span
                  class="text-sm mx-1"
                  data-testid="NewsCard__category"
                >
                  #Marketing
                </span>
              </div>
            </div>
          </div>
          <div
            class="Divider-sc-17ehhxk-0 lgtApE border-theme-secondary-300 dark:border-theme-secondary-800"
            type="horizontal"
          />
          <div
            class="whitespace-pre-line text-theme-secondary-text"
            data-testid="NewsCard__content"
          >
            June is over and it's time for the Monthly Update. This blog post will cover last month’s highlights, activities, development, partner activities, news and updates of our upcoming releases. 
            <a
              class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="#"
              rel="noopener noreferrer"
              to="https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36"
            >
              <span
                class="Link__Content-sc-ec014t-1 hUiuRR"
              >
                https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36
              </span>
              <div
                class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                data-testid="Link__external"
                height="16"
                width="16"
              >
                <svg>
                  arrow-external.svg
                </svg>
              </div>
            </a>
          </div>
          <div
            class="flex justify-center p-1 -mx-10 border-t-2 border-theme-primary-100 dark:border-theme-secondary-800"
          >
            <img
              alt="Payvo Banner"
              src="https://via.placeholder.com/150"
            />
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
